objects/Favorite__c.object
<CustomObject>
    <fields>
        <fullName>Number23__c</fullName>
        <label>Number23</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Favorites</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestSalma__c</fullName>
        <label>TestSalma</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestSantosh__c</fullName>
        <label>TestSantosh</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Regional_Dispatch_Favorite</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional Dispatch</label>
        <queue>Regional_Dispatch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Favorite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>